--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,6 +23,6 @@ jobs:
     - name: Build & Push Image
       run: |
         cd ./python
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "aayusomp" --password-stdin
+        echo "${{ secrets.DOCKERPW }}" | docker login -u aayusomp -p Motoquad1998@
         docker image build -t aayusomp/gitops:hellov1.0 .
         docker push aayusomp/gitops:hellov1.0
